search by @, view another profile

--- a/public/common/Kit/File/File.pug
+++ b/public/common/Kit/File/File.pug
@@ -1,10 +1,11 @@
 if !asButton
 	div(class="file-uploader"  id="file-uploader-id" style=src !== null ? `background: url(${src}) no-repeat center/contain`: "")
 		span
-			input(type="file" style="display: none" id="file-input-id" accept=accept)
-			div
-				img(class="file-uploader__img" src="/static/img/plus_gray.png" alt="")
-				div(class="file-uploader__text")="Upload"
+			input(type="file" style="display: none" id="file-input-id" accept=accept disabled=disabled )
+			if src === null
+				div
+					img(class="file-uploader__img" src="/static/img/plus_gray.png" alt="")
+					div(class="file-uploader__text")="Upload"
 else
 	div
-		input(class="form-edit__input" type="file" name="file" id="file-input-id" accept=accept)
+		input(class="form-edit__input" type="file" name="file" id="file-input-id" accept=accept disabled=disabled )
