--- a/public/components/Content/Playlists/Playlists.scss
+++ b/public/components/Content/Playlists/Playlists.scss
@@ -115,6 +115,7 @@ div.card-item__img:hover span.card-item__dots {visibility: visible;}
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   border-radius: 10px;
   right: 0;
+  z-index: 1;
 
   &__item {
 	color: $font-color;
