--- a/public/components/Content/Search/Search.pug
+++ b/public/components/Content/Search/Search.pug
@@ -11,4 +11,4 @@ div(class="search-container")
 			div(id="search-artists-container-id")
 	if 	albums.length === 0 && artists.length === 0 && tracks.length === 0
 		div
-			h2="Nothing found yet."
+			div(class="headline light size-20")="Nothing found yet."
