--- a/public/components/Player/Player.pug
+++ b/public/components/Player/Player.pug
@@ -8,10 +8,10 @@ div(class="player-grid")
 				div(class="player__column-name")
 					div(class="track-name")=item.name
 					div(class="artist-name")=item.artist
-			div(class="player__column")
-				div(class="player__column-container")
-					button(class="track__like")
-						img(class="track__like-btn" src="/static/img/heart.png" alt="")
+			//div(class="player__column")
+			//	div(class="player__column-container")
+			//		button(class="track__like")
+			//			img(class="track__like-btn" src="/static/img/heart.png" alt="")
 	div(class="player__control")
 		div(class="player__control-block")
 			div(class="controls")
