--- a/public/components/Lists/TrackList/Track/Track.pug
+++ b/public/components/Lists/TrackList/Track/Track.pug
@@ -15,9 +15,25 @@ div
 			div(class="track__title")=track.name
 			div(class="track__subtitle")=track.artist
 
+	//div(class="track__like-container")
+	//	button(class="track__like")
+	//		if user
+	//			if track.is_favourite && track.is_favourite === true
+	//				img(class="track__like-btn" src="/static/img/heart_fill.png" alt="" id=`like-btn-${track.id}`)
+	//			else
+	//				img(class="track__like-btn" src="/static/img/heart.png" alt="" id=`like-btn-${track.id}`)
+
 	div(class="track__like-container")
-		button(class="track__like")
-			img(class="track__like-btn" src="/static/img/heart.png" alt="")
+		div(class="track__like")
+			div(class="dropdown")
+				img(class="card-item__dots-size clickable" src="static/img/dots.png" alt="")
+				div(class="dropdown-content")
+					if !track.is_favourite
+						p(class="dropdown-content__item" id=`like-btn-${track.id}`)="Add to favourite"
+					else
+						p(class="dropdown-content__item" id=`remove-btn-${track.id}`)="Remove from favourite"
+					p(class="dropdown-content__item border-bottom" id=`add-to-playlist-${track.id}`)="Add to playlist"
 
 	div(class="track__duration-container")
 		div(class="track__duration")=track.duration
+
