--- a/public/components/Profile/Profile.pug
+++ b/public/components/Profile/Profile.pug
@@ -8,3 +8,8 @@ div
 				div(class="user-info__main-email")=user.email
 				if !anotherProfile
 					div(class="user-info__main-logout" id="logout_link")="Log Out"
+				else
+					if forFollow
+						div(class="btn btn-accent user-info__follow-btn" id='follow-btn')="Follow"
+					else
+						div(class="btn btn-light user-info__follow-btn" id='unfollow-btn')="Unfollow"
