--- a/public/components/ProfileTabs/ProfileSettings/ProfileSettings.scss
+++ b/public/components/ProfileTabs/ProfileSettings/ProfileSettings.scss
@@ -1,4 +1,4 @@
-@import "../../vars";
+@import "../../../vars";
 
 .user-tabs {
   grid-row: 2/4;
@@ -73,4 +73,19 @@
   font-size: 20px;
   font-weight: bold;
   margin-left: 10px;
+}
+
+.tab-grid {
+  display: grid;
+  margin-right: 50px;
+  grid-template-columns: 1fr 1fr;
+
+  &__column {
+    grid-column: 1/2;
+  }
+
+  &__item {
+    padding: 5px 0;
+    border-bottom: 1px solid #ddd;
+  }
 }
