playlist page, readme updated

--- a/public/components/Content/Playlists/Playlists.pug
+++ b/public/components/Content/Playlists/Playlists.pug
@@ -17,5 +17,5 @@ div(class="content-cards")
 								div(class="dropdown-content")
 									p(class="dropdown-content__item" id=`delete-playlist-btn-${item.id}`)="Remove playlist"
 									p(class="dropdown-content__item border-bottom")="Share playlist"
-					div(class="card-item__title card-item__fix-width")=item.name
+					div(class="card-item__title card-item__fix-width" id=`playlist-name-${item.id}`)=item.name
 					div(class="card-item__subtitle card-item__fix-width")=item.description
