--- a/public/components/Content/Playlists/Playlists.scss
+++ b/public/components/Content/Playlists/Playlists.scss
@@ -51,6 +51,11 @@
 	transition: .3s;
   }
 
+  &__title:hover {
+	text-decoration: underline;
+	cursor: pointer;
+  }
+
   &__subtitle {
 	font-size: 14px;
 	color: $font-light-color;
