--- a/public/common/Admin/ItemList/ItemList.pug
+++ b/public/common/Admin/ItemList/ItemList.pug
@@ -15,10 +15,12 @@ div
                             if (column.title === 'Actions')
                                 td
                                     div(class="actions")
-                                        button(class="edit-btn btn_row" name="edit-btn" data-id=item.id)
-                                            img(alt="edit-icon" src="/static/img/admin/edit.png")
-                                        button(class="edit-btn btn_row" name="delete-btn" data-id=item.id)
-                                            img(alt="delete-icon" src="/static/img/admin/delete.png")
+                                        if editBtn
+                                            button(class="edit-btn btn_row" name="edit-btn" data-id=item.id)
+                                                img(alt="edit-icon" src="/static/img/admin/edit.png")
+                                        if deleteBtn
+                                            button(class="edit-btn btn_row" name="delete-btn" data-id=item.id)
+                                                img(alt="delete-icon" src="/static/img/admin/delete.png")
                             else
                                 td #{item[column.dataIndex]}
             div(id="pagination")
