--- a/public/components/Content/Home/Home.scss
+++ b/public/components/Content/Home/Home.scss
@@ -33,7 +33,6 @@
 }
 
 .artists-list {
-  display: grid;
 
   &__item {
     margin-bottom: 10px;
@@ -62,6 +61,11 @@
     width: 100px;
     height: 100px;
     border-radius: 10px;
+  }
+
+  &__avatar-size {
+    width: 150px;
+    height: 150px;
   }
 
   &__name {
