another profile tabs

--- a/public/index.scss
+++ b/public/index.scss
@@ -20,7 +20,7 @@
 @import "components/Content/Album/Album";
 @import "components/Player/Player";
 @import "views/HomeView/HomeView";
-@import "css/admin";
+@import "components/Admin/Menu/admin";
 @import "views/ProfileView/ProfileView";
 @import "vars";
 
