--- a/public/views/ProfileView/ProfileView.scss
+++ b/public/views/ProfileView/ProfileView.scss
@@ -4,5 +4,5 @@
     display: grid;
     padding: 30px 0 30px $padding-left-content;
     grid-row-gap: 30px;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: min-content;
 }
