--- a/public/index.scss
+++ b/public/index.scss
@@ -187,6 +187,7 @@
     font-size: 18px;
     cursor: pointer;
     font-weight: bold;
+    outline: none;
 }
 
 .btn {
@@ -228,7 +229,7 @@ $icon_color: #6b6b6b;
     width: 500px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 20px;
+    grid-gap: 10px;
     padding: 20% 20%;
     background-color: #ffffff;
     border-radius: 50px;
@@ -238,14 +239,12 @@ $icon_color: #6b6b6b;
     font-size: 14px;
 }
 
-.input_container:hover {
+.input_field:hover {
     background-color: $input_hover;
 }
 
 .input_container {
-    height: 60px;
     width: 100%;
-    border-bottom: solid 1px #1F2F5B;
 }
 
 .input_field {
@@ -257,11 +256,25 @@ $icon_color: #6b6b6b;
     font-size: 1.3rem;
     font-weight: 400;
     outline: none;
+    border-bottom: solid 1px #1F2F5B;
+    margin-bottom: 3px;
+    height: 40px;
 }
 .text-center {
     text-align: center;
 }
 
+.input__error {
+    font-size: 14px;
+    height: 14px;
+    color: $accent-color;
+}
 
+.submit__error {
+    color: $accent-color;
+    font-size: 14px;
+    text-align: center;
+    height: 14px;
+}
 
 /******************* form end *******************/
