--- a/public/components/NewHeader/NewHeader.pug
+++ b/public/components/NewHeader/NewHeader.pug
@@ -1,6 +1,6 @@
 div(class="header header-grid")
 	div(class="header__search-container")
-		div(class="header__search-container-inner" id="search-container-id")
+		div(class=`header__search-container-inner ${headerPositionClass}` id="search-container-id")
 	div(class="header__user-container")
 		if (!user)
 			div(class="header__link-container")
@@ -9,7 +9,7 @@ div(class="header header-grid")
 		else
 			div(class="header__user-container-inner")
 				div(class="user-nickname" id="profile_name")
-					div(class="user-nickname__inner")=user.nickname
+					div(class=`user-nickname__inner ${headerPositionClass}`)=user.nickname
 				div(class="user-logo")
-					div(class="user-logo__img-container")
+					div(class=`user-logo__img-container ${headerPositionClass}`)
 						img(class="user-logo__img" src=user.avatar alt="img" id="profile_avatar")
