--- a/public/components/NewHeader/NewHeader.scss
+++ b/public/components/NewHeader/NewHeader.scss
@@ -38,7 +38,14 @@
 
   display: flex;
   justify-content: center;
+}
+
+.header__align-center {
   align-items: center;
+}
+
+.header__align-top {
+  margin-top: 20px;
 }
 
 .search {
@@ -116,7 +123,6 @@
   font-size: 18px;
   display: flex;
   justify-content: center;
-  align-items: center;
   cursor: pointer;
   height: 100%;
 }
@@ -129,7 +135,6 @@
   &__img-container {
     display: flex;
     justify-content: center;
-    align-items: center;
     height: 100%;
   }
 
