--- a/public/vars.scss
+++ b/public/vars.scss
@@ -9,6 +9,7 @@ $player-color: #FCFCFC;
 $progress-dark-color: #BCC2CF;
 
 $header-height: 80px;
+$artist-height: 200px;
 
 $border-radius-content: 50px;
 
