file upload fixes, profile view contains popup id

--- a/public/views/ProfileView/ProfileView.pug
+++ b/public/views/ProfileView/ProfileView.pug
@@ -7,3 +7,4 @@ div(class="wrapper wrapper-grid" id="wrapper")
 				div(class="user-info" id="user-info")
 				div(class="user-tabs" id="user-tabs")
 div(class="player" id="player-id")
+div(id="popup")
