artist tracks and albums

--- a/public/index.scss
+++ b/public/index.scss
@@ -18,6 +18,7 @@
 @import "common/Kit/File/File";
 @import "components/Content/Album/Album";
 @import "components/Player/Player";
+@import "components/Content/Artist/Artist";
 @import "views/HomeView/HomeView";
 @import "components/Admin/Menu/admin";
 @import "views/ProfileView/ProfileView";
