handlers for albums, artists and playlists

--- a/public/components/Content/Playlist/Playlist.pug
+++ b/public/components/Content/Playlist/Playlist.pug
@@ -7,6 +7,6 @@ div(class="content-inner")
 					img(src=item.playlist.photo alt="" class="album-aside__photo")
 				div(class="headline light size-14")=`${item.amount_of_tracks} songs`
 			div(class="album-container__tracks-container")
-				div(class="headline headline__block dark size-20 clickable")=item.playlist.name
+				div(class="headline headline__block dark size-20")=item.playlist.name
 				div(class="headline headline__block accent size-20")=item.playlist.description
 				div(id="playlist-track-list-id")
