--- a/public/components/Content/Playlists/Playlists.pug
+++ b/public/components/Content/Playlists/Playlists.pug
@@ -10,7 +10,7 @@ div(class="content-cards")
 			each item in items
 				div(class="card-item__container")
 					div(class="card-item__img")
-						img(src=item.photo alt="" class="card-item__img-inner")
+						img(src=item.photo alt="" class="card-item__img-inner" id=`playlist-img-${item.id}`)
 						span(class="card-item__dots" id=`card-additions-btn-${item.id}`)
 							div(class="dropdown")
 								img(class="card-item__dots-size" src="static/img/dots_white.png" alt="")
