--- a/public/components/Player/Player.pug
+++ b/public/components/Player/Player.pug
@@ -21,9 +21,9 @@ div(class="player-grid")
 				img(class="control-btn size-s" src="/static/img/next.png" alt="" id="player-next-btn")
 				//img(class="control-btn size-m" src="/static/img/repeat.png" alt="" id="player-repeat-btn")
 
-			div(class="progress")
-				div(class="secondary-progress")
-					div(class="primary-progress")
+			//div(class="progress")
+			//	div(class="secondary-progress")
+			//		div(class="primary-progress")
 	div(class="player__volume")
 	//div(class="player__volume")
 	//	div(class="player__volume-block")
