static path correction

--- a/public/components/Lists/TrackList/Track/Track.pug
+++ b/public/components/Lists/TrackList/Track/Track.pug
@@ -18,7 +18,7 @@ div
 	div(class="track__like-container")
 		div(class="track__like")
 			div(class="dropdown")
-				img(class="card-item__dots-size clickable" src="static/img/dots.png" alt="")
+				img(class="card-item__dots-size clickable" src="/static/img/dots.png" alt="")
 				div(class="dropdown-content")
 					if track.is_liked != null
 						if track.is_liked === true
