--- a/public/components/Content/Playlists/Playlists.pug
+++ b/public/components/Content/Playlists/Playlists.pug
@@ -13,7 +13,7 @@ div(class="content-cards")
 						img(src=item.photo alt="" class="card-item__img-inner" id=`playlist-img-${item.id}`)
 						span(class="card-item__dots" id=`card-additions-btn-${item.id}`)
 							div(class="dropdown")
-								img(class="card-item__dots-size" src="static/img/dots_white.png" alt="")
+								img(class="card-item__dots-size" src="/static/img/dots_white.png" alt="")
 								div(class="dropdown-content")
 									p(class="dropdown-content__item" id=`delete-playlist-btn-${item.id}`)="Remove playlist"
 									p(class="dropdown-content__item border-bottom" id=`share-playlist-btn-${item.id}`)="Share playlist"
