--- a/public/components/ProfileTabs/PlaylistsTab/PlaylistsTab.pug
+++ b/public/components/ProfileTabs/PlaylistsTab/PlaylistsTab.pug
@@ -7,5 +7,5 @@ ddiv(class="tab-grid")
 						div(class="track__avatar-img" style=`background: url(${item.photo}) no-repeat center/cover;` id=`track-avatar-control-${item.id}`)
 				div(class="track__name-container")
 					div(class="track__name")
-						div(class="track__title" id=`playlist-href-${item.id}`)=item.name
-						div(class="track__subtitle")=`${item.description}`
+						div(class="track__label" id=`playlist-href-${item.id}`)=item.name
+						div(class="track__description")=`${item.description}`
