--- a/public/components/ProfileTabs/PeopleList/PeopleList.pug
+++ b/public/components/ProfileTabs/PeopleList/PeopleList.pug
@@ -4,10 +4,10 @@ ddiv(class="tab-grid")
 			div(class="tab-grid__item")
 				div(class="track__avatar-container")
 						div(class="track__avatar")
-							div(class="track__avatar-img" style=`background: url(${item.avatar}) no-repeat center/cover;` id=`track-avatar-control-${item.id}`)
+							div(class="track__avatar-img" style=`background: url(${item.avatar}) no-repeat center/cover;` id=`people-list-avatar-${item.nickname}`)
 				div(class="track__name-container")
 					div(class="track__name")
 						div(class="track__title")=item.email
-						div(class="track__subtitle")=`@${item.nickname}`
+						div(class="track__subtitle" id=`people-list-nick-${item.nickname}`)=`@${item.nickname}`
 
 
