player duration, clickable progress bar, correction profile tabs

--- a/public/components/Player/Player.scss
+++ b/public/components/Player/Player.scss
@@ -124,9 +124,9 @@
 }
 
 .primary-progress {
-  width: 30%;
   background-color: $accent-color;
   height: 6px;
+  width: 0;
 }
 
 .secondary-progress {
