--- a/public/components/Player/Player.pug
+++ b/public/components/Player/Player.pug
@@ -3,11 +3,11 @@ div(class="player-grid")
 		if item
 			div(class="player__column mr-10")
 				div(class="player__column-container")
-					img(class="player__track-logo" src=item.photo alt="")
+					img(class="player__track-logo clickable" src=item.photo alt="" id="playlist-album-img-id")
 			div(class="player__column mr-10")
 				div(class="player__column-name")
 					div(class="track-name")=item.name
-					div(class="artist-name")=item.artist
+					div(class="artist-name" id="player-artist-name-id")=item.artist
 			//div(class="player__column")
 			//	div(class="player__column-container")
 			//		button(class="track__like")
