--- a/public/components/Content/Artist/Artist.pug
+++ b/public/components/Content/Artist/Artist.pug
@@ -1,4 +1,4 @@
-div(class="artist-container-grid" style=artist ? `background: url(${artist.photo}) center/contain no-repeat; background-position: top;`: '')
+div(class="artist-container-grid artist-page__artist-header" style=artist ? `background-image: url(${artist.photo});`: '')
 	div(id="header")
 	div(class="content")
 		div(class="artist-page")
