try to fix blink in menu and header, search works correct with russian, track img on album fix, people list img fix

--- a/public/components/Profile/Profile.scss
+++ b/public/components/Profile/Profile.scss
@@ -48,10 +48,11 @@
   }
 
   &__follow-btn {
-    width: 120px;
+    width: 140px;
     border-radius: 20px;
     padding: 10px 30px;
     font-size: 18px;
+    text-align: center;
   }
 }
 
