--- a/public/components/ProfileTabs/PlaylistsTab/PlaylistsTab.pug
+++ b/public/components/ProfileTabs/PlaylistsTab/PlaylistsTab.pug
@@ -4,7 +4,7 @@ ddiv(class="tab-grid")
 			div(class="tab-grid__item")
 				div(class="track__avatar-container")
 					div(class="track__avatar")
-						div(class="track__avatar-img" style=`background: url(${item.photo}) no-repeat center/cover;` id=`playlist-avatar-${item.id}`)
+						div(class="track__avatar-img img-size" style=`background: url(${item.photo}) no-repeat center/cover;` id=`playlist-avatar-${item.id}`)
 				div(class="track__name-container")
 					div(class="track__name")
 						div(class="track__label" id=`playlist-href-${item.id}`)=item.name
