--- a/public/index.scss
+++ b/public/index.scss
@@ -205,3 +205,9 @@ $icon_color: #6b6b6b;
     text-align: center;
     height: 14px;
 }
+
+.img-size {
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+}
