--- a/public/components/NewHeader/NewHeader.pug
+++ b/public/components/NewHeader/NewHeader.pug
@@ -1,6 +1,6 @@
 div(class="header header-grid")
 	div(class="header__search-container")
-		div(class=`header__search-container-inner ${headerPositionClass}` id="search-container-id")
+		div(class=`header__search-container-inner header__align-top` id="search-container-id")
 	div(class="header__user-container")
 		if (!user)
 			div(class="header__link-container")
@@ -10,7 +10,7 @@ div(class="header header-grid")
 			div(class="header__user-container-inner")
 				if (!artistPage)
 					div(class="user-nickname" id="profile_name")
-						div(class=`user-nickname__inner ${headerPositionClass}`)=user.nickname
+						div(class=`user-nickname__inner` style="margin-top: 30px")=user.nickname
 				div(class="user-logo")
-					div(class=`user-logo__img-container ${headerPositionClass}`)
-						img(class=`user-logo__img ${artistPage ? 'user-logo__img-border' : ''}` src=user.avatar alt="img" id="profile_avatar")
+					div(class=`user-logo__img-container`)
+						img(class=`user-logo__img header__align-top user-logo__img-border` src=user.avatar alt="img" id="profile_avatar")
