--- a/public/components/NewHeader/NewHeader.scss
+++ b/public/components/NewHeader/NewHeader.scss
@@ -55,6 +55,7 @@
   border: $border-color solid 1px;
   border-radius: 40px;
   position: relative;
+  overflow: hidden;
 
   &__img {
     height: 100%;
@@ -77,7 +78,7 @@
 
   &__input {
     display: inline-block;
-    width: 500px;
+    width: 50%;
     height: 100%;
   }
 
